tests/invalid/Final_Invalid_6.whiley
function f(final int x) -> (int r):
    //
    switch(x):
        case 0:
            return 0
        default:
            x = x + 1
    //
    return x